syntax = "proto3";

package users;

message User {
    int32 id = 1;
    string name = 2;
    string email = 3;
}

message UserIdRequest {
    int32 id = 1;
}

message UsersList {
    repeated User users = 1;
}

message Empty {} 

service UserService {
    rpc GetAllUsers (Empty) returns (UsersList);
    rpc GetUserById (UserIdRequest) returns (User);
}
